--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fastapi-express",
-  "version": "1.0.1",
+  "version": "1.0.5",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,8 +20,10 @@
     "body-parser": "^1.19.0",
     "connect-redis": "^5.1.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-session": "^1.17.1",
-    "knex": "^0.95.2",
+    "knex": "^0.21.16",
+    "knex-schema-inspector": "^1.2.2",
     "moment": "^2.29.1",
     "node-react-serve": "^1.0.2",
     "redis": "^3.0.2"
