--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fastapi-express",
-  "version": "1.0.28",
+  "version": "1.0.29",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -23,7 +23,7 @@
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.1",
     "knex": "^0.21.19",
-    "knex-schema-inspector": "^1.2.2",
+    "knex-schema-inspector": "1.2.2",
     "moment": "^2.29.1",
     "node-react-serve": "^1.0.2",
     "redis": "^3.1.2"
