--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fastapi-express",
-  "version": "1.1.0",
+  "version": "1.1.9",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,23 +19,23 @@
   "dependencies": {
     "after": "0.8.2",
     "async": "3.2.0",
-    "debug": "2.6.9",
-    "depd": "1.1.2",
-    "mocha": "8.4.0",
+    "body-parser": "1.19.0",
+    "connect-redis": "6.0.0",
+    "debug": "4.3.1",
+    "depd": "2.0.0",
+    "express": "4.17.1",
+    "express-fileupload": "1.2.1",
+    "express-session": "1.17.2",
+    "knex": "^0.95.6",
+    "knex-schema-loader": "^1.0.1",
+    "mocha": "9.0.0",
+    "moment": "2.29.1",
+    "node-react-serve": "1.0.2",
     "nyc": "15.1.0",
     "on-headers": "1.0.2",
     "parseurl": "1.3.3",
-    "safe-buffer": "5.1.2",
-    "uid-safe": "2.1.5",
-    "body-parser": "1.19.0",
-    "connect-redis": "5.2.0",
-    "express": "4.17.1",
-    "express-fileupload": "1.2.1",
-    "express-session": "1.17.1",
-    "knex": "0.21.19",
-    "knex-schema-inspector": "1.2.2",
-    "moment": "2.29.1",
-    "node-react-serve": "1.0.2",
-    "redis": "3.1.2"
+    "redis": "3.1.2",
+    "safe-buffer": "5.2.1",
+    "uid-safe": "2.1.5"
   }
 }
