--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fastapi-express",
-  "version": "1.1.10",
+  "version": "1.1.12",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -30,7 +30,7 @@
     "knex-schema-loader": "^1.0.1",
     "mocha": "9.0.0",
     "moment": "2.29.1",
-    "node-react-serve": "1.0.2",
+    "node-react-serve": "^1.0.4",
     "nyc": "15.1.0",
     "on-headers": "1.0.2",
     "parseurl": "1.3.3",
