--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "knex-schema-loader": "^1.0.6",
     "mocha": "9.1.1",
     "moment": "2.29.1",
-    "node-react-serve": "1.1.5",
+    "node-react-serve": "^1.1.6",
     "nyc": "15.1.0",
     "on-headers": "1.0.2",
     "parseurl": "1.3.3",
